// Copyright 2022 The LUCI Authors. All rights reserved.
// Use of this source code is governed under the Apache License, Version 2.0
// that can be found in the LICENSE file.

syntax = "proto3";

package recipes.build.chromium.builder_config_verifier;

// Next ID: 2
message InputProperties {

  // Required, the directory where the per-builder config files are located
  //
  // The path is relative to the root of the repo. For each builder, the
  // relative path to the properties file from the builder config directory must
  // be <bucket>/<builder>/properties.json.
  string builder_config_directory = 1;
}
